fix some responsive layout issues

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -26,10 +26,6 @@ a {
 	margin-top: 5px;
 }
 
-.user-bio {
-    white-space: pre;
-}
-
 .gravatar {
     border-radius: 100%;
     margin-right: 20px;
